crates/tokmd-format/tests/snapshots/fun_snapshots__snapshot_midi_empty_120bpm.snap
---
source: crates/tokmd-format/tests/fun_snapshots.rs
expression: "midi_hex(&[], 120)"
---
4d 54 68 64 00 00 00 06 00 00 00 01 01 e0 4d 54 72 6b 00 00 00 0b 00 ff 51 03 07 a1 20 00 ff 2f 00
