crates/tokmd-format/tests/snapshots/fun_snapshots__snapshot_obj_offset_building.snap
---
source: crates/tokmd-format/tests/fun_snapshots.rs
expression: output
---
# tokmd code city
o tower
v 10 20 0
v 15 20 0
v 15 23 0
v 10 23 0
v 10 20 50
v 15 20 50
v 15 23 50
v 10 23 50
f 1 2 3 4
f 5 6 7 8
f 1 2 6 5
f 2 3 7 6
f 3 4 8 7
f 4 1 5 8
