crates/tokmd-format/tests/snapshots/fun_snapshots__snapshot_obj_three_buildings_city.snap
---
source: crates/tokmd-format/tests/fun_snapshots.rs
expression: output
---
# tokmd code city
o core
v 0 0 0
v 3 0 0
v 3 3 0
v 0 3 0
v 0 0 20
v 3 0 20
v 3 3 20
v 0 3 20
f 1 2 3 4
f 5 6 7 8
f 1 2 6 5
f 2 3 7 6
f 3 4 8 7
f 4 1 5 8
o utils
v 5 0 0
v 7 0 0
v 7 2 0
v 5 2 0
v 5 0 5
v 7 0 5
v 7 2 5
v 5 2 5
f 9 10 11 12
f 13 14 15 16
f 9 10 14 13
f 10 11 15 14
f 11 12 16 15
f 12 9 13 16
o tests
v 0 5 0
v 4 5 0
v 4 6 0
v 0 6 0
v 0 5 2
v 4 5 2
v 4 6 2
v 0 6 2
f 17 18 19 20
f 21 22 23 24
f 17 18 22 21
f 18 19 23 22
f 19 20 24 23
f 20 17 21 24
