crates/tokmd-format/tests/snapshots/fun_snapshots__snapshot_obj_two_buildings.snap
---
source: crates/tokmd-format/tests/fun_snapshots.rs
expression: output
---
# tokmd code city
o lib
v 0 0 0
v 2 0 0
v 2 2 0
v 0 2 0
v 0 0 10
v 2 0 10
v 2 2 10
v 0 2 10
f 1 2 3 4
f 5 6 7 8
f 1 2 6 5
f 2 3 7 6
f 3 4 8 7
f 4 1 5 8
o main
v 5 0 0
v 6 0 0
v 6 1 0
v 5 1 0
v 5 0 3
v 6 0 3
v 6 1 3
v 5 1 3
f 9 10 11 12
f 13 14 15 16
f 9 10 14 13
f 10 11 15 14
f 11 12 16 15
f 12 9 13 16
